--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ project.ext {
 }
 version = "${project.ext.massive}.${project.ext.major}.${project.minor}"
 group = "me.desht.pneumaticcraft"
-archivesBaseName = "pneumaticcraft"
+archivesBaseName = "pneumaticcraft-repressurized"
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
